[gd_scene load_steps=3 format=3 uid="uid://fh882hrp4j4g"]

[ext_resource type="Script" path="res://player/SoundController.gd" id="1_402iu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3rtba"]
resource_local_to_scene = true
radius = 608.842

[node name="SoundController" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_402iu")

[node name="DisableTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_3rtba")

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
